# smiles-to-3d

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: faq.md  index.md  installation.md  spec-format.md  workflow.md
examples/: basic_render.py  pathway_demo.py  spec_example.yaml
scripts/: batch_render.py  gen_pathway_svg.py
smiles_to_3d/: __init__.py  cli.py  pathway.py  pathway_mpl.py  pathway_pptx.py  render.py
templates/: spec-template.yaml
